Overhaul 'Going further' section

--- a/fuel_tutorial/fuel_tutorial.ipynb
+++ b/fuel_tutorial/fuel_tutorial.ipynb
@@ -435,9 +435,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Going further\n",
+    "\n",
+    "You now know enough to find your way around Fuel. Let's cover some more advanced use cases.\n",
+    "\n",
     "## Large datasets\n",
     "\n",
-    "Sometimes, the dataset you're working on is too big to fit in memory. In that case, you'll want to use another common dataset class, `H5PYDataset`.\n",
+    "Sometimes, the dataset you're working on is too big to fit in memory. In that case, you'll want to use another common ``Dataset`` subclass, `H5PYDataset`.\n",
     "\n",
     "### H5PYDataset\n",
     "\n",
@@ -603,7 +607,7 @@
     "\n",
     "The `H5PYDataset` class isn't suitable only to large datasets. In fact, most of Fuel's built-in datasets rely on  HDF5 for storage.\n",
     "\n",
-    "At first sight, this might seem inefficient, but `H5PYDataset` features a `load_in_memory` constructor argument which, when set to `True`, reads data off disk once and stores it in memory as a numpy array."
+    "At first sight, this might seem inefficient (data in an HDF5 file is read off disk instead of being stored in memory, which is considerably slower), but `H5PYDataset` features a `load_in_memory` constructor argument which, when set to `True`, reads data off disk once and stores it in memory as a numpy array."
    ]
   },
   {
@@ -612,9 +616,23 @@
    "source": [
     "## Built-in datasets\n",
     "\n",
+    "Fuel aims to facilitate iterating over and transforming data, which we've covered up to now, but one of its goals is also to make it easy to download, convert and store often-used datasets. This is what will be covered in this section.\n",
+    "\n",
+    "Built-in datasets are datasets which can be obtained through Fuel's automated downloading and conversion tools. Here are some built-in datasets available in Fuel:\n",
+    "\n",
+    "* Iris\n",
+    "* MNIST\n",
+    "* Binarized MNIST\n",
+    "* CIFAR10\n",
+    "* CIFAR100\n",
+    "* SVHN (format 1, format 2)\n",
+    "* Caltech 101 silhouettes\n",
+    "\n",
     "### Defining where Fuel looks for data\n",
     "\n",
-    "You can tell Fuel where to look for data by setting the `data_path` variable in `~/.fuelrc`:"
+    "Fuel implements specific ``Dataset`` subclasses for each of the built-in datasets. They all expect their corresponding data files to be contained inside one of the directories defined in the Fuel data path.\n",
+    "\n",
+    "You can define this data path by setting the `data_path` variable in `~/.fuelrc`:"
    ]
   },
   {
@@ -733,13 +751,38 @@
    "source": [
     "### Default transformers\n",
     "\n",
-    "Another dataset feature we'll be covering is the use of default transformers. Through their `default_transformers` attribute, datasets can describe a transformer pipeline which maps their data into a nicer format.\n",
+    "Datasets can define a convenience transformer pipeline, which can automatically be applied when instantiating a data stream by using the alternative ``DataStream.default_stream`` constructor. We call these *default transformers*. Use cases for default transformers include the following:\n",
     "\n",
-    "This is the case for MNIST. For storage efficiency reasons, images are stored in `uint8` format and pixel values range from 0 to 255. However, people typically think of MNIST features as floating point numbers going from 0.0 to 1.0.\n",
+    "* To save disk space, some datasets may store their data in a format that's different from the format that's typically used for machine learning applications. This is the case for the MNIST, CIFAR10 and CIFAR100 built-in datasets: the raw data being 8-bit images, the datasets are stored using `uint8` bytes, which is space-efficient. However, this means that pixel values range from 0 to 255, as opposed to the `[0.0, 1.0]` range machine learning practitioners are used to. In order to reduce the amount of boilerplate code users have to write to use these datasets, their default transformers divide features by 255 and cast them as `floatX`.\n",
+    "* Some datasets, such as SVHN or ImageNet, are composed of variable-length features, but some preprocessing (e.g. scale the short side of the image to 256 pixels and take a random square crop) is usually applied to obtain fixed-sized features. Although there is no unique way to preprocess these features, such datasets may define default transformers corresponding to an often-used method, or to a method used in a landmark paper (e.g. AlexNet).\n",
     "\n",
-    "Manually implementing a transformer pipeline everytime you want to use MNIST is tedious, so MNIST defines a default transformer pipeline that divides features by 255.0 and casts them as `floatX`.\n",
+    "Default transformers are defined through the `default_transformers` class attribute. It is expected to be a tuple with one element per transformer in the pipeline. Each element is a tuple with three elements:\n",
     "\n",
-    "You can have this pipeline automatically plugged into your data stream by using the `DataStream.default_stream` alternative constructor."
+    "* the ``Transformer`` subclass to apply,\n",
+    "* a list of arguments to pass to the subclass constructor, and\n",
+    "* a dict of keyword arguments to pass to the subclass constructor.\n",
+    "\n",
+    "Let's look at what MNIST defines as a default transformer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(MNIST.default_transformers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Like explained above, MNIST defines a two-transformer pipeline as its default transformers. The first transformer scales the features by 1 / 255 so that they range between 0 and 1, and the second transformer casts the features to ``floatX``.\n",
+    "\n",
+    "Let's compare the output of a data stream with and without the default transformers applied."
    ]
   },
   {
