--- a/fuel_tutorial/fuel_tutorial.ipynb
+++ b/fuel_tutorial/fuel_tutorial.ipynb
@@ -257,6 +257,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Restricting sources\n",
+    "\n",
+    "In some cases (e.g. unsupervised learning), you might want to use a subset of the provided sources. This is achieved by passing a `sources` argument to the dataset constructor. Here's an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dataset = IndexableDataset(\n",
+    "    indexables=OrderedDict([('features', features), ('targets', targets)]),\n",
+    "    axis_labels={'features': ('batch', 'height', 'width'), 'targets': ('batch', 'index')},\n",
+    "    sources=('features',))\n",
+    "\n",
+    "state = dataset.open()\n",
+    "print(dataset.get_data(state=state, request=[0, 1]))\n",
+    "dataset.close(state=state)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can see that in this case only the features are returned by `get_data`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Iteration schemes: which examples to visit\n",
     "\n",
     "Encapsulating and accessing our data is good, but if we're to integrate it into a training loop, we need to be able to iterate over the data. For that, we need to decide *which* indices to request and in *which order*. This is accomplished via an `IterationScheme` subclass.\n",
@@ -734,15 +768,6 @@
     "pyplot.imshow(image.reshape((28, 28)), cmap=cm.Greys_r, interpolation='nearest')\n",
     "pyplot.show()\n",
     "dataset.close(state)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Restricting sources\n",
-    "\n",
-    "This feature is not unique to built-in datasets (it applies to all datasets), but now is a good time to explain it: Fuel allows you to restrict which sources are iterated over through a `sources` constructor argument. This is what was going on in the last block of code."
    ]
   },
   {
