Update Scan tutorial to work with floatX=float32

--- a/scan_tutorial/scan_tutorial.ipynb
+++ b/scan_tutorial/scan_tutorial.ipynb
@@ -539,7 +539,8 @@
     "                                       outputs=polynomial,\n",
     "                                       updates=updates)\n",
     "\n",
-    "print(calculate_polynomial([1, 0, 2], 3))\n",
+    "test_coeff = np.asarray([1, 0, 2], dtype=np.float32)\n",
+    "print(calculate_polynomial(test_coeff, 3))\n",
     "# 19.0"
    ]
   },
@@ -554,7 +555,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -617,8 +618,9 @@
     "                    outputs=[samples])\n",
     "\n",
     "# Testing the function\n",
+    "test_probs = np.asarray([0.6, 0.3, 0.1], dtype=np.float32)\n",
     "for i in range(10):\n",
-    "    print(f([0.6, 0.3, 0.1], 2))\n"
+    "    print(f(test_probs, 2))"
    ]
   },
   {
@@ -656,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
