--- a/scan_tutorial/scan_tutorial.ipynb
+++ b/scan_tutorial/scan_tutorial.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -108,11 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0.   2.   6.  12.  20.]\n"
+     ]
+    }
+   ],
    "source": [
     "vector1_value = np.arange(0, 5).astype(theano.config.floatX) # [0,1,2,3,4]\n",
     "vector2_value = np.arange(1, 6).astype(theano.config.floatX) # [1,2,3,4,5]\n",
@@ -128,11 +136,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0.   2.   6.  12.]\n"
+     ]
+    }
+   ],
    "source": [
     "print(f(vector1_value, vector2_value[:4]))"
    ]
@@ -152,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -218,11 +234,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-3. -1.]\n",
+      " [-1.  1.]\n",
+      " [ 1.  3.]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/carriepl/Documents/PYTHON/theano/scan_module/scan_perform_ext.py:135: RuntimeWarning: numpy.ndarray size changed, may indicate binary incompatibility\n",
+      "  from scan_perform.scan_perform import *\n"
+     ]
+    }
+   ],
    "source": [
     "f = theano.function(inputs=[X, W, b],\n",
     "                    outputs=output,\n",
@@ -249,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -276,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -299,11 +333,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0.   1.   2.]\n",
+      " [  3.   5.   7.]\n",
+      " [  9.  12.  15.]]\n"
+     ]
+    }
+   ],
    "source": [
     "f = theano.function(inputs=[M, s],\n",
     "                    outputs=output,\n",
@@ -340,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -363,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -387,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -409,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -432,11 +476,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[   2.    3.    5.    8.   13.   21.   34.   55.   89.  144.]\n",
+      "[ 2.          1.5         1.66666663  1.60000002  1.625       1.61538458\n",
+      "  1.61904764  1.61764705  1.61818182  1.6179775 ]\n"
+     ]
+    }
+   ],
    "source": [
     "f = theano.function(inputs=[f_init],\n",
     "                    outputs=[next_fibonacci_terms, ratios_between_terms],\n",
@@ -514,11 +568,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.0\n"
+     ]
+    }
+   ],
    "source": [
     "coefficients = theano.tensor.vector(\"coefficients\")\n",
     "x = T.scalar(\"x\")\n",
@@ -539,7 +601,7 @@
     "                                       outputs=polynomial,\n",
     "                                       updates=updates)\n",
     "\n",
-    "test_coeff = np.asarray([1, 0, 2], dtype=np.float32)\n",
+    "test_coeff = np.asarray([1, 0, 2], dtype=theano.config.floatX)\n",
     "print(calculate_polynomial(test_coeff, 3))\n",
     "# 19.0"
    ]
@@ -553,11 +615,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.0\n"
+     ]
+    }
+   ],
    "source": [
     "%load scan_ex1_solution.py"
    ]
@@ -618,7 +688,7 @@
     "                    outputs=[samples])\n",
     "\n",
     "# Testing the function\n",
-    "test_probs = np.asarray([0.6, 0.3, 0.1], dtype=np.float32)\n",
+    "test_probs = np.asarray([0.6, 0.3, 0.1], dtype=theano.config.floatX)\n",
     "for i in range(10):\n",
     "    print(f(test_probs, 2))"
    ]
@@ -632,14 +702,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([1, 0])]\n",
+      "[array([1, 0])]\n",
+      "[array([0, 2])]\n",
+      "[array([0, 1])]\n",
+      "[array([0, 1])]\n",
+      "[array([1, 0])]\n",
+      "[array([2, 0])]\n",
+      "[array([0, 2])]\n",
+      "[array([1, 0])]\n",
+      "[array([1, 0])]\n"
+     ]
+    }
+   ],
    "source": [
     "%load scan_ex2_solution.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
