Fix errors in Fuel tutorial

--- a/fuel_tutorial/fuel_tutorial.ipynb
+++ b/fuel_tutorial/fuel_tutorial.ipynb
@@ -270,14 +270,14 @@
    },
    "outputs": [],
    "source": [
-    "dataset = IndexableDataset(\n",
+    "restricted_dataset = IndexableDataset(\n",
     "    indexables=OrderedDict([('features', features), ('targets', targets)]),\n",
     "    axis_labels={'features': ('batch', 'height', 'width'), 'targets': ('batch', 'index')},\n",
     "    sources=('features',))\n",
     "\n",
     "state = dataset.open()\n",
-    "print(dataset.get_data(state=state, request=[0, 1]))\n",
-    "dataset.close(state=state)"
+    "print(restricted_dataset.get_data(state=state, request=[0, 1]))\n",
+    "restricted_dataset.close(state=state)"
    ]
   },
   {
@@ -1033,7 +1033,7 @@
     "            produces_examples=data_stream.produces_examples,\n",
     "            **kwargs)\n",
     "\n",
-    "    def transform_any_source(self, source):\n",
+    "    def transform_any_source(self, source, _):\n",
     "        return 2 * source"
    ]
   },
