Make intro_theano/exercices.ipynb Python 2/3 compatible

--- a/intro_theano/exercises.ipynb
+++ b/intro_theano/exercises.ipynb
@@ -73,7 +73,7 @@
     "actual = f(a, b)\n",
     "expected = 1. + np.log(2.)\n",
     "assert np.allclose(actual, expected)\n",
-    "print \"SUCCESS!\""
+    "print(\"SUCCESS!\")"
    ]
   },
   {
@@ -168,7 +168,7 @@
     "\n",
     "actual = f(a_value, b_value, d_value)\n",
     "assert np.allclose(actual, expected)\n",
-    "print \"SUCCESS!\""
+    "print(\"SUCCESS!\")"
    ]
   },
   {
@@ -264,7 +264,7 @@
     "actual = f(a_value, b_value)\n",
     "\n",
     "assert np.allclose(actual, expected), (actual, expected)\n",
-    "print \"SUCCESS!\""
+    "print(\"SUCCESS!\")"
    ]
   },
   {
@@ -325,7 +325,7 @@
     "y = T.iscalar()\n",
     "z = x + y\n",
     "assert evaluate(x, y, z, 1, 2) == 3\n",
-    "print \"SUCCESS!\""
+    "print(\"SUCCESS!\")"
    ]
   },
   {
@@ -413,7 +413,7 @@
     "assert np.all(a.get_value() == 0.)\n",
     "assert np.all(b.get_value() == 1.)\n",
     "\n",
-    "print \"SUCCESS!\""
+    "print(\"SUCCESS!\")"
    ]
   },
   {
@@ -470,7 +470,7 @@
     "z = x + y\n",
     "s = grad_sum(x, y, z)\n",
     "assert s.eval({x: 0, y: 0}) == 2\n",
-    "print \"SUCCESS!\""
+    "print(\"SUCCESS!\")"
    ]
   },
   {
