Make intro_theano/logistic_regression.ipynb Python 2/3 compatible

--- a/intro_theano/logistic_regression.ipynb
+++ b/intro_theano/logistic_regression.ipynb
@@ -34,7 +34,8 @@
     "import os\n",
     "import requests\n",
     "import gzip\n",
-    "import pickle\n",
+    "import six\n",
+    "from six.moves import cPickle\n",
     "\n",
     "if not os.path.exists('mnist.pkl.gz'):\n",
     "    r = requests.get('http://www.iro.umontreal.ca/~lisa/deep/data/mnist/mnist.pkl.gz')\n",
@@ -42,7 +43,10 @@
     "        data_file.write(r.content)\n",
     "\n",
     "with gzip.open('mnist.pkl.gz', 'rb') as data_file:\n",
-    "    train_set, valid_set, test_set = pickle.load(data_file)\n",
+    "    if six.PY3:\n",
+    "        train_set, valid_set, test_set = cPickle.load(data_file, encoding='latin1')\n",
+    "    else:\n",
+    "        train_set, valid_set, test_set = cPickle.load(data_file)\n",
     "\n",
     "train_set_x, train_set_y = train_set\n",
     "valid_set_x, valid_set_y = valid_set\n",
@@ -282,9 +286,9 @@
     "## Define a couple of helper variables and functions for the optimization\n",
     "batch_size = 500\n",
     "# compute number of minibatches for training, validation and testing\n",
-    "n_train_batches = train_set_x.shape[0] / batch_size\n",
-    "n_valid_batches = valid_set_x.shape[0] / batch_size\n",
-    "n_test_batches = test_set_x.shape[0] / batch_size\n",
+    "n_train_batches = train_set_x.shape[0] // batch_size\n",
+    "n_valid_batches = valid_set_x.shape[0] // batch_size\n",
+    "n_test_batches = test_set_x.shape[0] // batch_size\n",
     "\n",
     "def get_minibatch(i, dataset_x, dataset_y):\n",
     "    start_idx = i * batch_size\n",
@@ -318,6 +322,7 @@
    "outputs": [],
    "source": [
     "import timeit\n",
+    "from six.moves import xrange\n",
     "\n",
     "best_validation_loss = numpy.inf\n",
     "test_score = 0.\n",
