Simplify H5PYDataset section of Fuel tutorial

--- a/fuel_tutorial/fuel_tutorial.ipynb
+++ b/fuel_tutorial/fuel_tutorial.ipynb
@@ -481,13 +481,7 @@
     "\n",
     "As the name implies, `H5PYDataset` is a dataset class that interfaces with HDF5 files using the `h5py` library.\n",
     "\n",
-    "HDF5 is a wonderful storage format, as it is organizable and self-documentable. This allows us to make a basic set of assumptions about the structure of an HDF5 file which, if met, greatly simplify creating new datasets and interacting with them. These assumptions are:\n",
-    "\n",
-    "* All data is stored into a single HDF5 file.\n",
-    "* Data sources reside in the root group, and their names define the source names.\n",
-    "* Data sources are not explicitly split into separate HDF5 datasets or separate HDF5 files. Instead, splits are defined in the `split` attribute of the root group.\n",
-    "    \n",
-    "Don't worry about that too much; Fuel has some built-in functions to take care of that.\n",
+    "HDF5 is a wonderful storage format, as it is organizable and self-documentable. This allows us to make a basic set of assumptions about the structure of an HDF5 file which, if met, greatly simplify creating new datasets and interacting with them. We won't go through these assumptions right now, but if you're curious, the online documentation offers an in-depth tutorial on how to create new `H5PYDataset`-compatible files.\n",
     "\n",
     "Let's create new random data. This time, we'll pretend that we're given a training set and a test set."
    ]
@@ -513,13 +507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We would normally need to\n",
-    "* open an HDF5 file for writing,\n",
-    "* create three datasets in the root group, one for each data source,\n",
-    "* fill the datasets with our training and test data and\n",
-    "* build the split array describing how the file is laid out.\n",
-    "\n",
-    "Fortunately for us, Fuel has a built-in function that automates the process."
+    "We now create an HDF5 file and populate it with our data."
    ]
   },
   {
@@ -546,7 +534,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before closing the file, let's also tag axes with their label."
+    "The `fill_hdf5_file` function fills the HDF5 file with our data and sets up metadata so `H5PYDataset` is able to recover our train and test splits.\n",
+    "\n",
+    "Before closing the file, let's also tag axes with their label. The populated HDF5 file features one dataset per data source (in our case, `image_features`, `vector_features` and `targets`), whose dimensions we can tag with a name. `H5PYDataset` is able to recover this information and create an `axis_labels` dict for us."
    ]
   },
   {
