--- a/fuel_tutorial/fuel_logreg.ipynb
+++ b/fuel_tutorial/fuel_logreg.ipynb
@@ -299,6 +299,8 @@
    },
    "outputs": [],
    "source": [
+    "from six.moves import xrange\n",
+    "\n",
     "best_validation_loss = numpy.inf\n",
     "test_score = 0.\n",
     "start_time = timeit.default_timer()\n",
