Clarify explanations in scan_tutorial

--- a/scan_tutorial/scan_tutorial.ipynb
+++ b/scan_tutorial/scan_tutorial.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -51,18 +51,18 @@
    "source": [
     "Next, we call the `scan()` function. It has many parameters but, because our use case is simple, we only need two of them. We'll introduce other parameters in the next examples.\n",
     "\n",
-    "The parameter `sequences` allows us to specify variables that Scan should iterate over. The first element of every sequence will be given as input to the first iteration., the second element of every sequence to the second iteration, ...\n",
+    "The parameter `sequences` allows us to specify variables that Scan should iterate over as it loops. The first iteration will take as input the first element of every sequence, the second iteration will take as input the second element of every sequence, etc. These individual element have will have one less dimension than the original sequences. For example, for a matrix sequence, the individual elements will be vectors.\n",
     "\n",
     "The parameter `fn` receives a function or lambda expression that expresses the computation to do at every iteration. It operates on the symbolic inputs to produce symbolic outputs. It will **only ever be called once**, to assemble the Theano graph used by Scan at every the iterations.\n",
     "\n",
-    "Since we wish to iterate over both `vector1` and `vector2` simultaneously, we provide them as sequences. This means that every iteration will operate on an element from `vector1` and the corresponding element from `vector2`. \n",
+    "Since we wish to iterate over both `vector1` and `vector2` simultaneously, we provide them as sequences. This means that every iteration will operate on two inputs: an element from `vector1` and the corresponding element from `vector2`. \n",
     "\n",
     "Because what we want is the elementwise product between the vectors, we provide a lambda expression that, given an element `a` from `vector1` and an element `b` from `vector2` computes and return the product."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -108,19 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  0.   2.   6.  12.  20.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vector1_value = np.arange(0, 5).astype(theano.config.floatX) # [0,1,2,3,4]\n",
     "vector2_value = np.arange(1, 6).astype(theano.config.floatX) # [1,2,3,4,5]\n",
@@ -136,19 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  0.   2.   6.  12.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f(vector1_value, vector2_value[:4]))"
    ]
@@ -161,14 +145,14 @@
     "\n",
     "In this example, we introduce another of Scan's features; non-sequences. To demonstrate how to use them, we use Scan to compute the activations of  a linear MLP layer over a minibatch.\n",
     "\n",
-    "It is not yet a use case where Scan is truly useful but it introduces a requirement that sequences cannot fulfill; we need some variables (the parameters of the layer), to be available 'as is' at every iteration of the loop. We do *not* want Scan to iterate over them and give only part of them at every iteration.\n",
+    "It is not yet a use case where Scan is truly useful but it introduces a requirement that sequences cannot fulfill; if we want to use Scan to iterate over the minibatch elements and compute the activations for each of them, then we need some variables (the parameters of the layer), to be available 'as is' at every iteration of the loop. We do *not* want Scan to iterate over them and give only part of them at every iteration.\n",
     "\n",
     "Once again, we begin by setting up our Theano variables :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -183,30 +167,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example, the computation to be done at every iteration of the loop is more complex so we define and use a Python function, `step()`, that defines this computation.\n",
+    "For the sake of variety, in this example we define the computation to be done at every iteration of the loop using a Python function, `step()`, instead of a lambda expression.\n",
     "\n",
-    "We plan to use Scan to iterate over the matrix $X$ and compute the activations for each individual input so we define a `step()` function that will compute the activation of a single input `v` given the weights `W` and the biases `b`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def step(v, W, b):\n",
-    "    return T.dot(v, W) + b"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To have the full weight matrix `W` and the full bias vector `b` available at every iteration, we use the argument `non_sequences`. Contrary to sequences, non-sequences are not iterated upon by Scan. Every non-sequence is passed as input to every iteration.\n",
+    "To have the full weight matrix W and the full bias vector b available at every iteration, we use the argument non_sequences. Contrary to sequences, non-sequences are not iterated upon by Scan. Every non-sequence is passed as input to every iteration.\n",
     "\n",
-    "In the `step()` function, the arguments that correspond to the non-sequences are **always** the last ones. This means that the correspondence between the inputs of the `step()` function and the arguments to `scan()` is the following : \n",
+    "This means that our `step()` function will need to operate on three symbolic inputs; one for our sequence X and one for each of our non-sequences W and b. \n",
+    "\n",
+    "The inputs that correspond to the non-sequences are **always** last and in the same order at the non-sequences are provided to Scan. This means that the correspondence between the inputs of the `step()` function and the arguments to `scan()` is the following : \n",
     "\n",
     "* `v` : individual element of the sequence `X` \n",
     "* `W` and `b` : non-sequences `W` and `b`, respectively"
@@ -214,12 +181,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "def step(v, W, b):\n",
+    "    return T.dot(v, W) + b\n",
+    "\n",
     "output, updates = theano.scan(fn=step,\n",
     "                              sequences=[X],\n",
     "                              non_sequences=[W, b])"
@@ -234,29 +204,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-3. -1.]\n",
-      " [-1.  1.]\n",
-      " [ 1.  3.]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/carriepl/Documents/PYTHON/theano/scan_module/scan_perform_ext.py:135: RuntimeWarning: numpy.ndarray size changed, may indicate binary incompatibility\n",
-      "  from scan_perform.scan_perform import *\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = theano.function(inputs=[X, W, b],\n",
     "                    outputs=output,\n",
@@ -276,14 +228,14 @@
     "\n",
     "In this example, we will use Scan to compute a cumulative sum over the first dimension of a matrix $M$. This means that the output will be a matrix $S$ in which the first row will be equal to the first row of $M$, the second row will be equal to the sum of the two first rows of $M$, and so on.\n",
     "\n",
-    "Another way to express this, which is the way we will implement here, is that $S[t] = S[t-1] + M[t]$. We will use Scan to iterate over the rows of matrix $M$, accumulating a sum of every row that has been previously seen and, at every iteration, we simply add the current row of $M$ and return the result.\n",
+    "Another way to express this, which is the way we will implement here, is that $S[t] = S[t-1] + M[t]$. Implementing this with Scan would involve iterating over the rows of the matrix $M$ and, at every iteration, reuse the cumulative row that was output at the previous iteration and return the sum of it and the current row of $M$.\n",
     "\n",
-    "Implementing a step function that corresponds to this is simple :"
+    "If we assume for a moment that we can get Scan to provide the output value from the previous iteration as an input for every iteration, implementing a step function is simple :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -299,18 +251,18 @@
    "source": [
     "The trick part is informing Scan that our step function expects as input the output of a previous iteration. To achieve this, we need to use a new parameter of the `scan()` function: `outputs_info`. This parameter is used to tell Scan how we intend to use each of the outputs that are computed at each iteration.\n",
     "\n",
-    "This parameter can be omited (like we did so far) when the step function doesn't depend on any output of a previous iteration. However, now that we wish to have recurrent outputs, we need to start using it.\n",
+    "This parameter can be omitted (like we did so far) when the step function doesn't depend on any output of a previous iteration. However, now that we wish to have recurrent outputs, we need to start using it.\n",
     "\n",
     "`outputs_info` takes a sequence with one element for every output of the `step()` function :\n",
     "* For a **non-recurrent output** (like in every example before this one), the element should be `None`.\n",
     "* For a **simple recurrent output** (iteration $t$ depends on the value at iteration $t-1$), the element must be a tensor. Scan will interpret it as being an initial state for a recurrent output and give it as input to the first iteration, pretending it is the output value from a previous iteration. For subsequent iterations, Scan will automatically handle giving the previous output value as an input.\n",
     "\n",
-    "In the `step()` function, the arguments that correspond to output values from previous iteration are **always** after those that correspond to sequences but before those that correspond to non-sequences. The are received by the `step()` function in the order in which the outputs are declared in the outputs_info sequence."
+    "The `step()` function needs to expect one additional input for each simple recurrent output. These inputs correspond to outputs from previous iteration and are **always** after the inputs that correspond to sequences but before those that correspond to non-sequences. The are received by the `step()` function in the order in which the recurrent outputs are declared in the outputs_info sequence."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -333,21 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  0.   1.   2.]\n",
-      " [  3.   5.   7.]\n",
-      " [  9.  12.  15.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = theano.function(inputs=[M, s],\n",
     "                    outputs=output,\n",
@@ -384,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -400,43 +342,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now define the initial value for our sequence.\n",
-    "\n",
-    "The initial value for our Fibonacci sequence will be a vector. Why? Because every iteration will use the output of two previous iterations, that means we need to provide two initial states to Scan which it will as input for the first iteration. Those multiple initial states of $n$ dimensions must be given to Scan as single tensor of $n+1$ dimensions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "f_init = T.fvector()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "The next step is defining the value of `outputs_info`.\n",
     "\n",
     "Recall that, for **non-recurrent outputs**, the value is `None` and, for **simple recurrent outputs**, the value is a single initial state. For **general recurrent outputs**, where iteration $t$ may depend on multiple past values, the value is a dictionary. That dictionary has two values:\n",
     "* taps : list declaring which previous values of that output every iteration will need. `[-3, -2, -1]` would mean every iteration should take as input the last 3 values of that output. `[-2]` would mean every iteration should take as input the value of that output from two iterations ago.\n",
-    "* initial : tensor of initial states.\n",
+    "* initial : tensor of initial values. If every initial value has $n$ dimensions, `initial` will be a single tensor of $n+1$ dimensions with as many initial values as the oldest requested tap. In the case of the Fibonacci sequence, the individual initial values are scalars so the `initial` will be a vector. \n",
     "\n",
-    "In our example, we have two outputs. For the first output, every iteration should take as input the two last values. The second output is non-recurrent. We define the value of `outputs_info` as such :"
+    "In our example, we have two outputs. The first output is the next computed term of the Fibonacci sequence so every iteration should take as input the two last values of that output. The second output is the ratio between successive terms and we don't reuse its value so this output is non-recurrent. We define the value of `outputs_info` as such :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "f_init = T.fvector()\n",
     "outputs_info = [dict(initial=f_init, taps=[-2, -1]),\n",
     "                None]"
    ]
@@ -445,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we've defined the step function and the properties of our outputs, we can call the `scan()` function. Because the `step()` function has multiple outputs, the first output of `scan()` function will be a sequence of tensors: the first tensor containing all the states of the first output and the second tensor containing all the states of the second input.\n",
+    "Now that we've defined the step function and the properties of our outputs, we can call the `scan()` function. Because the `step()` function has multiple outputs, the first output of `scan()` function will be a list of tensors: the first tensor containing all the states of the first output and the second tensor containing all the states of the second input.\n",
     "\n",
     "In every previous example, we used sequences and Scan automatically inferred the number of iterations it needed to run from the length of these\n",
     "sequences. Now that we have no sequence, we need to explicitly tell Scan how many iterations to run using the `n_step` parameter. The value can be real or symbolic."
@@ -453,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -476,21 +399,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[   2.    3.    5.    8.   13.   21.   34.   55.   89.  144.]\n",
-      "[ 2.          1.5         1.66666663  1.60000002  1.625       1.61538458\n",
-      "  1.61904764  1.61764705  1.61818182  1.6179775 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = theano.function(inputs=[f_init],\n",
     "                    outputs=[next_fibonacci_terms, ratios_between_terms],\n",
@@ -568,19 +481,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "coefficients = theano.tensor.vector(\"coefficients\")\n",
     "x = T.scalar(\"x\")\n",
@@ -615,19 +520,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load scan_ex1_solution.py"
    ]
@@ -702,28 +599,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[array([1, 0])]\n",
-      "[array([1, 0])]\n",
-      "[array([0, 2])]\n",
-      "[array([0, 1])]\n",
-      "[array([0, 1])]\n",
-      "[array([1, 0])]\n",
-      "[array([2, 0])]\n",
-      "[array([0, 2])]\n",
-      "[array([1, 0])]\n",
-      "[array([1, 0])]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load scan_ex2_solution.py"
    ]
